--- a/full-stack.html
+++ b/full-stack.html
@@ -39,11 +39,11 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://caseware.workable.com/j/14E0C2A6F5'>CaseWare - Jobs: Full-Stack Developer - Innovation - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/letgo/jobs/1788032'>Job Application for Full Stack Engineer at letgo</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/improbable/ff8f17bb-f404-4073-877f-6b1ac8f0b47e'>Improbable - Lead Full Stack Engineer</a></h5> 
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/double-negative-visual-effects/job/oENCafwX'>DNEG Careers - D?veloppeur Full Stack (SGI) / Full Stack Developer (IMS)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/double-negative-visual-effects/job/oENCafwX'>DNEG Careers - D?veloppeur Full Stack (SGI) / Full Stack Developer (IMS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -152,7 +152,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 elements of our HR platform offerings as well as automating our complex 
 business?...</p>
 <hr/>
-<h5><a href='https://crossbeam.workable.com/j/D1112F3072'>Crossbeam - Jobs: Full Stack Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crossbeam.workable.com/j/D1112F3072'>Crossbeam - Jobs: Full Stack Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -174,7 +174,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
+<h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -194,7 +194,7 @@ interesting?...</p>
 <p>Jul 16, 2019 ... The Jade Software Corporation Digital Team has a position available for a Full-
 Stack Developer to join our digital delivery team as they build a solution for a?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/channel-advisor/job/oO8vafwl'>ChannelAdvisor Careers - Full Stack User Interface Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/channel-advisor/job/oO8vafwl'>ChannelAdvisor Careers - Full Stack User Interface Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 14, 2019 ... Express your creativity in Developer Choice competitions, with the opportunity to 
 win prizes and recognition from your peers. Required Qualifications: Minimum 3?...</p>
@@ -237,7 +237,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definedcrowd.recruitee.com/o/automation-and-tooling-engineer-full-stack'>
+<h5><a href='https://definedcrowd.recruitee.com/o/automation-and-tooling-engineer-full-stack'>
       Automation and Tooling Engineer (Full Stack) - DefinedCrowd
     </a></h5> 
 <p><span class="badge badge-light">Porto, Portugal</span></p>
@@ -249,7 +249,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
+<h5><a href='https://jobs.lever.co/gunio/69133cb1-da75-401c-aace-6c06f7c90430'>Gun.io - Full-Stack React + Node Developer with a passion for music</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -383,7 +383,7 @@ the job details and apply today!</p>
 <p>1 day ago ... Apply online for the job of Senior Back End Java Developer (Full Stack) at Youtap 
 Limited.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
+<h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Full Stack Developer at Food52.</p>
 <hr/>
@@ -397,7 +397,7 @@ Limited.</p>
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/clarifai/jobs/1781040?gh_jid=1781040'>Job Application for Full Stack Engineer at Clarifai</a></h5> 
+<h5><a href='https://boards.greenhouse.io/clarifai/jobs/1781040?gh_jid=1781040'>Job Application for Full Stack Engineer at Clarifai</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... You will collaborate closely with the backend, infrastructure, and applied 
 machine learning engineers, to craft and implement new product features. You 
@@ -474,7 +474,7 @@ This position reports to: Manager, Application Development. ServiceNow is?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/plangrid/4df472f4-26fd-47b6-a950-05d7620d3713'>PlanGrid - Fullstack Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/plangrid/4df472f4-26fd-47b6-a950-05d7620d3713'>PlanGrid - Fullstack Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
